log/build_2026-03-30_13-51-42/exam_example/stderr.log
Sorry: IndentationError: unindent does not match any outer indentation level (two_turtles.py, line 115)
  File "/home/ubuntu/ros_workspace/install/exam_example/lib/python3.12/site-packages/exam_example/distance_calc.py", line 63
    def obstacle_callback (self,msg)
                                    ^
SyntaxError: expected ':'

